--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.1.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2"
+    "terser-webpack-plugin": "^2.2.1"
   },
   "dependencies": {
     "phaser": "^3.20.1",
     "socket.io-client": "^2.3.0",
-    "webpack-dev-server": "^3.9.0"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   }
 }
