--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "url": "https://github.com/photonstorm/phaser3-project-template/issues"
   },
   "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
-    "file-loader": "^4.2.0",
-    "raw-loader": "^3.1.0"
-  },
-  "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "phaser": "^3.20.1",
+    "raw-loader": "^3.1.0",
     "socket.io-client": "^2.3.0",
     "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.41.2",
